[gd_scene load_steps=4 format=3 uid="uid://dg6ygq33001cu"]

[ext_resource type="Script" path="res://src/core/actor/actor.gd" id="1_vwlen"]
[ext_resource type="PackedScene" uid="uid://c5r8su0ki15l8" path="res://src/core/actor/actor_sprite.tscn" id="2_shvgh"]
[ext_resource type="Script" path="res://src/core/timing/turn_taker.gd" id="3_8plh3"]

[node name="Actor" type="Node2D"]
position = Vector2(0, 16)
script = ExtResource("1_vwlen")
player_controlled = null
faction = null

[node name="ActorSprite" parent="." instance=ExtResource("2_shvgh")]
position = Vector2(0, 0)
origin_cell = Vector2i(0, -1)
metadata/_edit_lock_ = true

[node name="TurnTaker" type="Node" parent="."]
script = ExtResource("3_8plh3")

[connection signal="turn_started" from="TurnTaker" to="." method="_on_turn_taker_turn_started"]

[editable path="ActorSprite"]
